Update tasks file to mark commit task as completed

--- a/tasks-2025-04-24_17-44.md
+++ b/tasks-2025-04-24_17-44.md
@@ -8,7 +8,7 @@
 5. [x] Rename the project in settings.gradle.kts from "untitled66" to "ktor-performance-testing-app"
 6. [x] Check for other files that might reference the project name
 7. [x] Update any other files if necessary
-8. [ ] Commit the changes to the new branch
+8. [x] Commit the changes to the new branch
 
 ## Branch Management Tasks
 9. [ ] Make the "ktor-performance-testing-app" branch the main branch
