Update tasks file to mark branch management tasks as completed

--- a/tasks-2025-04-24_17-44.md
+++ b/tasks-2025-04-24_17-44.md
@@ -11,7 +11,7 @@
 8. [x] Commit the changes to the new branch
 
 ## Branch Management Tasks
-9. [ ] Make the "ktor-performance-testing-app" branch the main branch
-   - [ ] Rename the branch to "main" or
+9. [x] Make the "ktor-performance-testing-app" branch the main branch
+   - [x] Rename the branch to "main"
    - [ ] Set the branch as the default branch
-10. [ ] Verify the changes are correctly applied
+10. [x] Verify the changes are correctly applied
